Ensure auth forms look presentable on mobile

--- a/luckybreak/static/less/project.less
+++ b/luckybreak/static/less/project.less
@@ -104,3 +104,9 @@ nav {
     background-color: #ef5350;
   }
 }
+
+.side-nav {
+  .dropdown-content {
+    width: 100%;
+  }
+}
